fixed a syntax error to make navbar css work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,9 @@ nav a {
     margin-bottom: 2px;
     display: flex;
 }
+
+.navbar {
+    display: block;
+    position: relative;
+    cursor: pointer;
+  }
