--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,17 +561,18 @@ main {
       width: 100%;
       position: absolute;
       top:auto;
-      height: 100%;
+      height:84%;
     }
     
     .grid-container > div {
-      background-color:var(--header-background);
+      background-color:var();
       text-align: left;
       padding: 20px 0 0 20px;
       font-size: 30px;
     }
 
-    img {
-        height: 90%;
-        width: 60%;
+    .item {
+        padding: 10px;
+        border: 1px dotted black;
     }
+ 
