--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,18 @@ h1 {
 }
 
 header {
-    padding :40px;
+    padding :50px;
     background: var(--header-background);
     /* color:rgb(103, 12, 188); */
     color: var(--header-color);
     text-align: center;
     /* width: 100%; */
     text-shadow: 5px 5px 10px rgb(10, 11, 9);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.subtitle{
+    
 }
 
 a {
@@ -438,10 +443,10 @@ main {
     position:absolute;
     left: 5px;
     bottom:12%;
-    /* border-style:dotted; */
+    border-style:dotted;
     border-width: 1px;
     border-radius: var(--standard-border-radius);
-    padding: 0;
+    padding: 5px;
     flex: 0 0 300px;
     /* transform: rotate(8deg); */
     box-shadow: 10px 10px 5px #aaaaaa;
