--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,6 +620,10 @@ main {
         margin: 0px 30px 10px 0;
     }
 
+    img{
+        margin-left: 30px;
+    }
+
     #contact {
         color: black;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
