--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,10 @@ header {
 }
 
 .subtitle{
-    
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
+    font-weight: bolder;
 }
 
 a {
