change project images with background pic update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ a {
     /* text-transform: uppercase; */
     transition: 0.3s background-color;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
 }
 
 .navbar-title:before {
@@ -606,7 +607,7 @@ main {
         flex-direction:row;
         flex-wrap: wrap;
     }
-    
+
     .item {
         margin: 14px 0 0 20px;
         padding: 10px;
@@ -626,7 +627,7 @@ main {
     }
 
     .item1 {
-        background-image: url("https://wallpaperaccess.com/full/1930875.jpg");  
+        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");  
         background-repeat: no-repeat;
         background-size: cover;
         /* margin:30px 10px 10px 20px; */
@@ -640,31 +641,31 @@ main {
     }
 
     .item3 {
-        background-image: url("https://cdn.w600.comps.canstockphoto.com/project-drawing_csp24022541.jpg");  
+        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");  
         background-repeat: no-repeat;
         background-size: cover;
         /* margin:0px 10px 10px 20px; */
     }
 
     .item4 {
-        background-image: url("https://images.unsplash.com/photo-1611224885990-ab7363d1f2a9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1039&q=80");  
+        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");  
         background-repeat: no-repeat;
         background-size: cover;
         /* margin: 0px 30px 10px 0; */
     }
 
-/* img{
+img{
     margin-left: 40px;
-    width:30%;
-    height:30%;
+    margin-top: 10px;
+    width:60%;
     }
 
          
 
-img:active{
+/* img:active{
     margin:70px;
     transform:scale(2,2);
-    } */
+    }  */
 
     #contact {
         color: black;
