--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,11 +663,12 @@ main {
 
 img{
     margin-left: 40px;
-    margin-top: 5px;
+    margin-top: 3px;
     width:60%;
     height: auto;
     max-width: 100%;
     max-height: 100%;
+    border: 6px groove rgb(234, 222, 222);
     }
          
 
